.metadata/.plugins/org.eclipse.cdt.ui/lab4.build.log
01:02:55 **** Incremental Build of configuration Debug for project lab4 ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m3 -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32L152xE -I../Inc -I../Drivers/STM32L1xx_HAL_Driver/Inc -I../Drivers/STM32L1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L1xx/Include -I../Drivers/CMSIS/Include -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -specs=nano.specs -o Src\main.o ..\Src\main.c 
..\Src\main.c: In function 'main':
..\Src\main.c:105:17: error: 'hadc' undeclared (first use in this function)
   HAL_DAC_Init(&hadc);
                 ^~~~
..\Src\main.c:105:17: note: each undeclared identifier is reported only once for each function it appears in

01:02:55 Build Finished (took 265ms)

